applicationjs pipeline issue resolved

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,18 @@
 <html>
   <head>
 
-    <meta property="og:title" content="MobinHood" />
-    <%# <meta property='og:image' content="<%= image_url("pic.png") %>
+    <meta property="og:title" content="Mobinhood" />
     <meta property="og:description"
-      content="Inspired by the investment app, Robinhood, Mobinhood is a stock trading application that allows users to purchase, sell, and keep track of stocks."
+      content="Inspired by the well-known investing app, Robinhood, Mobinhood is a stock trading application that allows users to purchase, sell, and keep track of stocks."
     />
-    <%# <meta property="og:url"
-      content="https://mobinhood.herokuapp.com/#/"
-    /> %>
 
 
-    <title>MobinHood</title>
+    <title>Mobinhood</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", media: "all" %>
-    <%# <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application" %>
     
-    <%= javascript_tag "application", 'data-turbolinks-track': "reload" %>
-
 
   </head>
 
