--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,14 +2,112 @@
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
  * vendor/assets/stylesheets directory can be referenced here using a relative path.
  *
  * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
  *= require_self
  */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: helvetica;
+  background-color: white;
+
+}
+
+.nav-list {
+  /* list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left:  0px;
+  margin: 0px 100px 0px 0px;
+  height: 75px; */
+
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-left: 0px;
+  margin: 0px 0px 0px 0px;
+  height: 75px;
+}
+
+.nav-list li {
+  cursor: pointer;
+}
+
+.nav-logged-out {
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-left: 0px;
+  margin: 0px 0px 0px 0px;
+  height: 75px;
+}
+
+.nav-logged-out-list {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 0px;
+  /* margin: 0px 100px 0px 30px; */
+  height: 75px;
+}
+
+.about-link {
+  text-decoration: none;
+  color: #2b273c;
+}
+
+
+.melplogo {
+  height: 50px;
+}
+
+.nav-links a {
+  font: bold 18px helvetica;
+  text-decoration: none;
+  background-color: transparent;
+  color: #2b273c;
+  padding: 10px 12px 10px 12px;
+  border-top: 1px solid lightgray;
+  border-right: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  border-left: 1px solid lightgray;
+  border-radius: 5px;
+  margin: 5px;
+  transition: 0.5s;
+  background-color: #c41200;
+}
+
+.nav-links a:last-child {
+  color: white;
+  background-color: #c41200;
+  border: none;
+  transition: 0.5s;
+}
+
+.nav-links a:hover {
+  text-decoration: none;
+  background-color: lightgray;
+}
+
+.nav-links a:last-child:hover {
+  text-decoration: none;
+  background-color: #d32323;
+}
+
+.mylinks {
+  display: flex;
+  flex-direction: column;
+}
