--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,5 +109,44 @@ body {
 
 .mylinks {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+.log-in-link {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 28px;
+  align-items: center;
+  box-sizing: border-box;
+  display: inline-flex;
+  letter-spacing: -0.25px;
+  justify-content: center;
+  margin-right: 25px;
+  text-decoration: none;
+}
+
+/* .nav-header {
+  max-height: calc(100% - 32px - env(safe-area-inset-bottom));
+  position: fixed;
+  top: 0;
+  width: 100%;
+} */
+
+.header-1{
+  display: flex;
+  flex-direction: row;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
 }
