--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -126,12 +126,14 @@ body {
   text-decoration: none;
 }
 
-/* .nav-header {
+.nav-header {
   max-height: calc(100% - 32px - env(safe-area-inset-bottom));
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   width: 100%;
-} */
+  display: flex;
+  justify-content: space-between;
+}
 
 .header-1{
   display: flex;
@@ -149,4 +151,107 @@ body {
   align-content: center;
   align-items: center;
   justify-content: center;
+}
+
+.nav-in-out{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.sign-in-1{
+    color: inherit;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  box-sizing: border-box;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  position: static;
+  text-align: start;
+  white-space: normal;
+  cursor: pointer;
+  background: rgb(255,255,255);
+  border: 1px solid rgb(0,0,0);
+  border-radius: 24px;
+  height: 44px;
+  padding: 0px 28px;
+  width: 102px;
+}
+
+.sign-up-1{
+  color: inherit;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  box-sizing: border-box;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  padding: 0 36px;
+  height: 48px;
+  min-width: 144px;
+  border-radius: 24px;
+  cursor: pointer;
+  background-color: rgb(0,200,5);
+  background: rgb(0,0,0);
+  border: 1px solid rgb(255,255,255);
+  height: 44px;
+  min-width: 102px !important;
+  padding: 0px 28px;
+  width: 102px !important;
+}
+
+.sign-in-link{
+  color: rgb(0,0,0);
+  font-size: 13px;
+  line-height: 20px;
+  font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: -0.25px;
+  text-decoration: unset;
+}
+
+.sign-up-link{
+  color: rgb(255,255,255);
+  font-size: 13px;
+  line-height: 20px;
+  font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: -0.25px;
+  text-decoration: unset;
+}
+
+.nav-in-space{
+  width: 12px;
+}
+
+.home{
+  padding: 0 24px;
 }
