top nav height and flex

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,7 +106,6 @@ body {
 
 .nav-links a:last-child:hover {
   text-decoration: none;
-  /* background-color: #d32323; */
   background-color: rgb(111, 229, 32);
 
 }
@@ -147,6 +146,8 @@ body {
 .nav {
   display: flex;
   flex-direction: row;
+  height: 64px;
+  align-items: center;
 }
 
 .nav-links {
